--- a/view/vue.ejs
+++ b/view/vue.ejs
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>WARDLE!</title>
 </head>
 <body>
+    <h1 id="title">Wardle!</h1>
+        <hr>
+        <br>
+        <div id="board">
+        </div>
+
+    <script>
+        var height = 6; 
+        var width = 5;
+        var row = 0;
+        var col = 0; 
+
+
     
+        
+         
+    </script>
 </body>
 </html>
