--- a/view/styles.css
+++ b/view/styles.css
@@ -13,27 +13,54 @@ hr {
     letter-spacing: 2px;
 }
 
-#board {
-    width: 350px;
-    height: 420px;
-    margin: 0 auto;
-    margin-top: 3px;
-    display: flex;
-    flex-wrap: wrap;
-}
+td {
+    border: 1px solid black;
 
-.tile {
-    border: 2px solid lightgray;
+
+}
+table {
     width: 60px;
     height: 60px;
-    margin: 2.5px;
+    margin-left: 10%;
+    border-radius: 7px;
     
-    color: black;
-    font-size: 36px;
-    font-weight: bold;
+}
+
+#keyboard {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
+.keyboard-row {
+    display: flex;
+    margin-bottom: 10px;
+}
 
+.key {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    font-size: 17px;
+    text-align: center;
+    line-height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #fff;
+}
+
+td.ln {
+    text-align:center;
+    vertical-align: middle; 
+    border: 1px solid #ccc; 
+    font-size: 1.2rem; 
+    background-color: #f9f9f9; 
+    padding: 25px;
+    
+}
+    
+table {
+    border-collapse: collapse;
+    margin: 0 auto; 
+}
