--- a/view/vue.ejs
+++ b/view/vue.ejs
@@ -1,28 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>WARDLE!</title>
 </head>
+
 <body>
     <h1 id="title">Wardle!</h1>
-        <hr>
-        <br>
-        <div id="board">
+    <hr>
+    <br>
+    <table id="tab">
+        <tr id="ligne">
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+        </tr>
+        <tr id="ligne"> 
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+        </tr>
+        <tr id="ligne"> 
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+        </tr>
+        <tr id="ligne"> 
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+        </tr>
+        <tr id="ligne"> 
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+            <td class="ln">
+                ?
+            </td>
+        </tr>
+        <tr id="ligne">
+    </table>
+    <div id="keyboard">
+        <div class="keyboard-row">
+            <a class="key" href="/id=A">A</a>
+            <a class="key" href="/id=Z">Z</a>
+            <a class="key" href="/id=E">E</a>
+            <a class="key" href="/id=R">R</a>
+            <a class="key" href="/id=T">T</a>
+            <a class="key" href="/id=Y">Y</a>
+            <a class="key" href="/id=U">U</a>
+            <a class="key" href="/id=I">I</a>
+            <a class="key" href="/id=O">O</a>
+            <a class="key" href="/id=P">P</a>
         </div>
-
+        <div class="keyboard-row">
+            <a class="key" href="/id=Q">Q</a>
+            <a class="key" href="/id=S">S</a>
+            <a class="key" href="/id=D">D</a>
+            <a class="key" href="/id=F">F</a>
+            <a class="key" href="/id=G">G</a>
+            <a class="key" href="/id=H">H</a>
+            <a class="key" href="/id=J">J</a>
+            <a class="key" href="/id=K">K</a>
+            <a class="key" href="/id=L">L</a>
+        </div>
+        <div class="keyboard-row">
+            <a class="key" href="etr">↩</a>
+            <a class="key" href="rt"> ⌦</a>
+        </div>
+    </div>
+    </div>
     <script>
-        var height = 6; 
-        var width = 5;
-        var row = 0;
-        var col = 0; 
 
-
-    
-        
-         
     </script>
 </body>
+
 </html>
