--- a/view/vue.ejs
+++ b/view/vue.ejs
@@ -15,87 +15,87 @@
     <table id="tab">
         <tr id="ligne">
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
-            </td>
-        </tr>
-        <tr id="ligne"> 
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
+                
             </td>
         </tr>
         <tr id="ligne"> 
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
-            </td>
-        </tr>
-        <tr id="ligne"> 
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
-            </td>
-            <td class="ln">
-                ?
+                
             </td>
         </tr>
         <tr id="ligne"> 
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
             </td>
             <td class="ln">
-                ?
+                
+            </td>
+        </tr>
+        <tr id="ligne"> 
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
+            </td>
+        </tr>
+        <tr id="ligne"> 
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
+            </td>
+            <td class="ln">
+                
             </td>
         </tr>
         <tr id="ligne">
@@ -131,7 +131,12 @@
     </div>
     </div>
     <script>
-
+        const variable = document.querySelectorAll('.ln');
+        variable.forEach(variable => {
+        if (variable.textContent.includes('')) {
+            variable.classList.add('');
+        }
+            });
     </script>
 </body>
 
