--- a/view/styles.css
+++ b/view/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: rgb(52, 52, 52);
 }
 
 hr {
@@ -11,6 +12,7 @@ hr {
     font-size: 36px;
     font-weight: bold;
     letter-spacing: 2px;
+    color: whitesmoke;
 }
 
 td {
@@ -30,6 +32,12 @@ table {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgba(36, 36, 36, 0.641);
+    border-radius: 10px;
+    margin-top: 100px;
+    bottom: 60px;
+    
+    
 }
 
 .keyboard-row {
