--- a/view/vue.ejs
+++ b/view/vue.ejs
@@ -95,7 +95,7 @@
                 
             </td>
             <td class="ln">
-                
+        
             </td>
         </tr>
         <tr id="ligne">
@@ -125,18 +125,28 @@
             <a class="key" href="/id=L">L</a>
         </div>
         <div class="keyboard-row">
-            <a class="key" href="etr">↩</a>
-            <a class="key" href="rt"> ⌦</a>
+            <a class="key" href="/etr">↩</a>
+            <a class="key" href="/rt"> ⌦</a>
         </div>
     </div>
     </div>
     <script>
-        const variable = document.querySelectorAll('.ln');
-        variable.forEach(variable => {
-        if (variable.textContent.includes('')) {
-            variable.classList.add('');
+        var variable = document.querySelectorAll('.ln');
+        variable.forEach(variables => {
+        if (variables.classList.contains('valide')   ) {
+            variables.style.backgroundColor='rgb(192, 57, 43)';
         }
             });
+        variable.forEach(variables => {
+            if (variables.classList.contains('invalide')) {
+                variables.style.backgroundColor='hsl(147, 50%, 47%)';
+            }
+        })
+        variable.forEach(variables => {
+            if (variables.classList.contains('bonneplace')) {
+                variables.style.backgroundColor='#9DA500';
+            }
+        })
     </script>
 </body>
 
