--- a/views/vue.ejs
+++ b/views/vue.ejs
@@ -94,7 +94,7 @@
             <td class="ln">
                 
             </td>
-            <td class="ln" >
+            <td class="ln desactive" >
         
             </td>
         </tr>
@@ -123,6 +123,15 @@
             <a class="key" href="/id=J">J</a>
             <a class="key" href="/id=K">K</a>
             <a class="key" href="/id=L">L</a>
+            <a class="key" href="/id=M">M</a>
+        </div>
+        <div class="keyboard-row">
+            <a class="key" href="/id=W">W</a>
+            <a class="key" href="/id=X">X</a>
+            <a class="key" href="/id=C">C</a>
+            <a class="key" href="/id=V">V</a>
+            <a class="key" href="/id=B">B</a>
+            <a class="key" href="/id=N">N</a>
         </div>
         <div class="keyboard-row">
             <a class="key" href="/etr">↩</a>
